[tool.poetry]
name = "llamaapi"
version = "0.1.29"
description = "Llama API python SDK"
authors = ["Eduardo Reis <edu.pontes@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.5"
requests = "^2.27.1"
nest-asyncio = "^1.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
